--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: wadi
-Theme URI: https://underscores.me/
-Author: Automattic
-Author URI: https://automattic.com/
-Description: Hi. I'm a starter theme called <code>wadi</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
+Theme URI: http://underscores.me/
+Author: Mohammed Rezq
+Author URI: https://www.wadiweb.com
+Description: Wadi Theme for High Quality Performance and Easy to Configure
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
