[Wadi-1] ignore dist scripts and styles, Add Header and Respnsive to Header on Wadi Theme

--- a/assets/src/sass/abstracts/variables/_colors.scss
+++ b/assets/src/sass/abstracts/variables/_colors.scss
@@ -18,3 +18,7 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$link__color: #000;
+$link__hover-color: #0066c5;
+$dark: #000;
