--- a/assets/src/sass/style.scss
+++ b/assets/src/sass/style.scss
@@ -100,3 +100,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Alignments
 --------------------------------------------- */
 @import "utilities/alignments";
+
+
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+@import "components/header/header";
+
+/*--------------------------------------------------------------
+# Search
+--------------------------------------------------------------*/
+@import "components/search/search.scss";
