--- a/assets/src/sass/components/_components.scss
+++ b/assets/src/sass/components/_components.scss
@@ -25,3 +25,15 @@
 /* Galleries
 --------------------------------------------- */
 @import "media/galleries";
+
+/* Header
+--------------------------------------------- */
+@import "header/header";
+
+/* Search
+--------------------------------------------- */
+@import "search/search";
+
+/* Footer
+--------------------------------------------- */
+@import "footer/footer";
