[wadi-2] Added Blog posts page with posts

--- a/assets/src/sass/style.scss
+++ b/assets/src/sass/style.scss
@@ -101,4 +101,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 @import "utilities/alignments";
 
-
+/*--------------------------------------------------------------
+# Pages
+--------------------------------------------------------------*/
+@import "pages/pages";
