--- a/assets/src/sass/pages/_blog-page.scss
+++ b/assets/src/sass/pages/_blog-page.scss
@@ -1,36 +1,108 @@
+
+
+
+
 .content-area {
-    padding: 60px;
+    padding: 0;
+    margin-bottom: 40px;
+    
+    .blog__content-posts {
+        
+    }
 
-  // Blog Posts Page Grid
+    .wadi-pagination {
+        margin-top: 80px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+  
+      .page-numbers {
+          font-size: 1.2rem;
+          margin-right: 8px;
+          &.current {
+              color: #220006;
+          }
+      }
+  
+      a {
+          color: #000;
+          text-decoration: none;
+          &:hover {
+              border-bottom: 1px solid #ccc;
+          }
+      }
+    }
+}
+@media screen and(min-width: 768px) {
+    .content-area {
+        padding: 60px;
+    
+      // Blog Posts Page Grid
+    
+      .blog__content-posts {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+        gap: 2rem;
+    
+        .wadi-blog-post-container {
+          display: flex;
+          justify-content: space-between;
+    
+          .wadi-blog-thumbnail {
+            min-width: 250px;
+            margin-right: 10px;
+    
+            .wadi-post-image__link {
+                display: block;
+                overflow: hidden;
+                
+                img {
+                    border-radius: 6px;
+                    height: 220px;
+                    width: 220px;
+                }
+            }
+          }
+    
+          .wadi-blog-post__text {
+              min-width: 350px;
+          }
+        }
+      }
+    
+      /* Pagination */
+      .wadi-pagination {
+          margin-top: 80px;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+    
+        .page-numbers {
+            font-size: 1.2rem;
+            margin-right: 8px;
+            padding: 7px 10px;
 
-  .blog__content-posts {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
-    gap: 2rem;
-
-    .wadi-blog-post-container {
-      display: flex;
-      justify-content: space-between;
-
-      .wadi-blog-thumbnail {
-        min-width: 250px;
-        margin-right: 10px;
-
-        .wadi-post-image__link {
-            display: block;
-            overflow: hidden;
-            
-            img {
-                border-radius: 6px;
-                height: 220px;
-                width: 220px;
+            &.current {
+                color: #fff;
+                background: #266ecf;
+                // padding: 7px 14px;
+                border-radius: 4px;
+            }
+        }
+    
+        a {
+            color: #000;
+            text-decoration: none;
+            &:hover {
+                background: #266ecf;
+                color: #fff;
+                border-radius: 4px;
             }
         }
       }
-
-      .wadi-blog-post__text {
-          min-width: 350px;
-      }
     }
-  }
 }
