--- a/assets/src/sass/components/footer/footer.scss
+++ b/assets/src/sass/components/footer/footer.scss
@@ -10,7 +10,9 @@
         margin: 0 auto;
         padding-left: 16px;
         padding-right: 16px;
-    
+        padding-bottom: 30px;
+        padding-top: 8px;
+        
         .footer-section {
             padding: 20px;
             .wadi__site-info {
@@ -68,6 +70,7 @@
                     padding: 0;
 
                     li {
+                        padding: 8px 0;
                         svg {
                             margin-right: 8px;
                             width: 20px;
@@ -76,6 +79,26 @@
                         // }
                     }
                 }
+            }
+        }
+    }
+
+    .wadi-copyright__footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px;
+        border-top: 1px solid #808080;
+        color: #fff;
+        font-size: 14px;
+
+        a {
+            color: #fff;
+            margin-left: 6px;
+            text-decoration: none;
+
+            &:hover {
+                border-bottom: 1px solid #eee;
             }
         }
     }
