[Wadi-5] Added Styling for Comments section (Rough) but looks nice

--- a/assets/src/sass/components/comments/_comments.scss
+++ b/assets/src/sass/components/comments/_comments.scss
@@ -1,7 +1,91 @@
+.comment-list {
+  list-style: none;
+  .comment {
+    // &.even {
+    //   background-color: #f5f5f5;
+    //   border: 1px solid #ddd;
+    //   margin-bottom: 6px;
+    //   padding: 10px;
+    // }
+    // &.odd {
+    // }
+    background-color: #fff;
+    border: 1px solid #ddd;
+    margin-bottom: 6px;
+    padding: 10px;
+    border-left: 5px solid #eee;
+    padding: 16px;
+    position: relative;
+    font-size: 18px;
+
+    .comment-metadata {
+      display: flex;
+      justify-content: space-between;
+    }
+    .vcard {
+      display: flex;
+      align-items: center;
+
+      .fn {
+        margin-right: 8px;
+      }
+      .avatar {
+        margin-right: 8px;
+        border-radius: 50%;
+      }
+    }
+    a {
+      color: $dark;
+      text-decoration: none;
+      &:hover,
+      &:focus {
+        border-bottom: 1px solid rgb(34, 34, 34);
+      }
+    }
+
+    .reply {
+      background-color: #39a8ef;
+      border-radius: 4px;
+      padding: 10px;
+      text-align: center;
+      text-decoration: none;
+      width: 100px;
+
+      a {
+        color: #fff;
+        &:hover {
+          border-bottom: 1px solid #fff;
+        }
+      }
+    }
+
+	.comment-respond {
+
+		.form-submit {
+
+			.submit {
+				background: #39a8ef;
+				border-radius: 3px;
+				color: #fff;
+				line-height: 1;
+				border: none;
+    			padding: 14px;
+				cursor: pointer;
+			}
+		}
+	}
+  }
+
+  ol.children {
+    list-style: none;
+	margin-top: 12px;
+  }
+}
+
 .comment-content a {
-	word-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .bypostauthor {
-	display: block;
+  display: block;
 }
