--- a/assets/src/sass/components/comments/_comments.scss
+++ b/assets/src/sass/components/comments/_comments.scss
@@ -1,5 +1,7 @@
 .comment-list {
   list-style: none;
+  padding-left: 0;
+  margin-left: 0;
   .comment {
     // &.even {
     //   background-color: #f5f5f5;
