[Wadi-6] Added Pagination to Search Page and Fixed responsivity for Search Page!

--- a/assets/src/sass/pages/_search.scss
+++ b/assets/src/sass/pages/_search.scss
@@ -1,23 +1,39 @@
 .search {
-
-    .page-header {
-        
-        .search-page-head{
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-    }
     .wadi-search__form {
-        padding: 0 140px;
+        padding: 0 20px;
     }
     .content-area {
-        padding: 0 140px;
+        padding: 0 20px;
     }
-
+    
     .no-results, .not-found {
-        padding: 0 140px;
+        padding: 0 20px;
     } 
+}
+
+@media screen and(min-width: 768px) {
+    .search {
+    
+        .page-header {
+            
+            .search-page-head{
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                text-align: center;
+                margin-bottom: 30px;
+            }
+        }
+        .wadi-search__form {
+            padding: 0 140px;
+        }
+        .content-area {
+            padding: 0 140px;
+        }
+    
+        .no-results, .not-found {
+            padding: 0 140px;
+        } 
+    }
+    
 }
