[Wadi-6] Added Styling for Separator Block and some enhancements

--- a/assets/src/sass/style.scss
+++ b/assets/src/sass/style.scss
@@ -105,3 +105,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Pages
 --------------------------------------------------------------*/
 @import "pages/pages";
+
+/*--------------------------------------------------------------
+# Pages
+--------------------------------------------------------------*/
+@import "blocks/blocks";
