--- a/assets/src/sass/components/header/header.scss
+++ b/assets/src/sass/components/header/header.scss
@@ -136,7 +136,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 24px 0;
+      margin: 24px 0 0 0;
       padding: 0 24px;
       border-bottom: 2px solid #eee;
     }
