--- a/assets/src/sass/pages/_page.scss
+++ b/assets/src/sass/pages/_page.scss
@@ -35,7 +35,7 @@
             }
     
             &>* {
-                margin: 20px 0;
+                // margin: 20px 0;
                 max-width: 100%;
             }
             & ul li, & ol li {
