[Wadi-6] Added SVG Images for Home Page and made Home page current sections responsive

--- a/assets/src/sass/generic/_normalize.scss
+++ b/assets/src/sass/generic/_normalize.scss
@@ -11,6 +11,8 @@
 html {
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
+	min-width: 100%;
+	overflow-x: hidden;
 }
 
 /* Sections
@@ -22,6 +24,8 @@ html {
 
 body {
 	margin: 0;
+	min-width: 100%;
+	overflow-x: hidden;
 }
 
 /**
