--- a/assets/src/sass/pages/_home.scss
+++ b/assets/src/sass/pages/_home.scss
@@ -1,15 +1,21 @@
+@import "../abstracts/variables/colors";
+
 .wadi__home-container {
   .wadi__hero-section {
+    padding: 40px 0;
     > * {
       margin: 0;
     }
 
-    min-height: 400px;
     font-family: "GFS Didot";
     color: #000;
-    display: flex;
-    align-content: center;
-    justify-content: flex-start;
+    // display: flex;
+    // align-content: center;
+    // justify-content: flex-start;
+    display: grid;
+    gap: 1rem;
+    // grid-template-columns: repeat(2, 1fr);
+    height: auto;
     padding-left: 40px;
     padding-right: 40px;
 
@@ -33,8 +39,11 @@
         }
       }
     }
+    .wadi__hero-image {
+      display: none;
+    }
     h1 {
-      color: #9f3a3a;
+      color: $main__wadi;
       em {
         color: #616060;
       }
@@ -45,7 +54,7 @@ Wadi Survey Section Styling
 */
   .wadi__survey-section {
     background-color: #f7f7f7;
-    min-height: 350px;
+    height: auto;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 1rem;
@@ -55,8 +64,8 @@ Wadi Survey Section Styling
       padding-right: 40px;
       h1 {
         font-weight: 900;
-        color: brown;
-        font-size: 3em;
+        color: $main__wadi;
+        font-size: 2.2em;
         font-family: "GFS Didot";
       }
       p {
@@ -64,7 +73,7 @@ Wadi Survey Section Styling
       }
     }
     .wadi__survey_image {
-      padding-left: 40px;
+      display: none;
     }
   }
 }
@@ -75,43 +84,53 @@ Wadi Survey Section Styling
       > * {
         margin: 0;
       }
-      min-height: 400px;
+      height: auto;
       color: #000;
-      display: flex;
-      align-content: center;
-      justify-content: flex-start;
+      // display: flex;
+      // align-content: center;
+      // justify-content: flex-start;
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: repeat(2, 1fr);
       padding-left: 40px;
       font-family: "GFS Didot";
       padding-right: 40px;
+      justify-items: center;
+      align-items: center;
 
       h1 {
         font-size: 2.75em;
-        color: #9f3a3a;
+        color: $main__wadi;
         em {
           color: #616060;
         }
       }
 
       .wadi__hero-text {
-        margin: 60px 120px;
+        margin: 0 120px;
       }
-    }
+      .wadi__hero-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 350px;
+      }
+      .wadi__hero-contact {
+        display: flex;
+        max-width: 100%;
+        margin-top: 30px;
 
-    .wadi__hero-contact {
-      display: flex;
-      max-width: 100%;
-      margin-top: 30px;
+        .waid__hero-contact-link {
+          color: #fff;
+          font-size: 1.2rem;
+          border-radius: 6px;
+          text-decoration: none;
+          padding: 20px;
+          background-color: #212121;
 
-      .waid__hero-contact-link {
-        color: #fff;
-        font-size: 1.2rem;
-        border-radius: 6px;
-        text-decoration: none;
-        padding: 20px;
-        background-color: #212121;
-
-        &:hover {
-          background-color: #000;
+          &:hover {
+            background-color: #000;
+          }
         }
       }
     }
@@ -121,16 +140,22 @@ Wadi Survey Section Styling
     */
     .wadi__survey-section {
       background-color: #f7f7f7;
-      min-height: 350px;
+      height: auto;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 1rem;
+      justify-items: center;
+      align-items: center;
+      padding: 60px;
 
       .wadi__survey_text {
-        padding-left: 180px;
+        padding-left: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         h1 {
           // font-weight: 700;
-          color: brown;
+          color: $main__wadi;
         }
         p {
           font-size: 1.2rem;
@@ -138,6 +163,13 @@ Wadi Survey Section Styling
       }
       .wadi__survey_image {
         padding-left: 40px;
+        display: block;
+        // justify-content: center;
+        // align-items: center;
+        svg {
+          width: 350px;
+          height: auto;
+        }
       }
     }
   }
@@ -146,11 +178,14 @@ Wadi Survey Section Styling
 @media screen and(max-width: 1000px) and (min-width: 768px) {
   .wadi__home-container {
     .wadi__hero-section {
-      min-height: 400px;
+      height: auto;
+      .wadi__hero-text {
+        margin: 30px;
+      }
       h1 {
-        font-family:  'GFS Didot';
+        font-family: "GFS Didot";
         font-size: 2em;
-        color: #9f3a3a;
+        color: $main__wadi;
         em {
           color: #616060;
         }
@@ -161,16 +196,19 @@ Wadi Survey Section Styling
     */
     .wadi__survey-section {
       background-color: #f7f7f7;
-      min-height: 350px;
+      height: auto;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 1rem;
 
       .wadi__survey_text {
-        padding-left: 100px;
+        padding-left: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         h1 {
           // font-weight: 700;
-          color: brown;
+          color: $main__wadi;
         }
         p {
           font-size: 1.2rem;
@@ -178,6 +216,13 @@ Wadi Survey Section Styling
       }
       .wadi__survey_image {
         padding-left: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        svg {
+          width: 350px;
+          height: auto;
+        }
       }
     }
   }
