--- a/assets/src/sass/pages/_home.scss
+++ b/assets/src/sass/pages/_home.scss
@@ -7,14 +7,9 @@
       margin: 0;
     }
 
-    font-family: "GFS Didot";
     color: #000;
-    // display: flex;
-    // align-content: center;
-    // justify-content: flex-start;
     display: grid;
     gap: 1rem;
-    // grid-template-columns: repeat(2, 1fr);
     height: auto;
     padding-left: 40px;
     padding-right: 40px;
@@ -66,8 +61,7 @@ Wadi Survey Section Styling
         font-weight: 900;
         color: $main__wadi;
         font-size: 2.2em;
-        font-family: "GFS Didot";
-      }
+          }
       p {
         font-size: 1.2rem;
       }
@@ -86,15 +80,11 @@ Wadi Survey Section Styling
       }
       height: auto;
       color: #000;
-      // display: flex;
-      // align-content: center;
-      // justify-content: flex-start;
       display: grid;
       gap: 1rem;
       grid-template-columns: repeat(2, 1fr);
       padding-left: 40px;
-      font-family: "GFS Didot";
-      padding-right: 40px;
+        padding-right: 40px;
       justify-items: center;
       align-items: center;
 
@@ -154,7 +144,6 @@ Wadi Survey Section Styling
         flex-direction: column;
         justify-content: center;
         h1 {
-          // font-weight: 700;
           color: $main__wadi;
         }
         p {
@@ -164,8 +153,7 @@ Wadi Survey Section Styling
       .wadi__survey_image {
         padding-left: 40px;
         display: block;
-        // justify-content: center;
-        // align-items: center;
+
         svg {
           width: 350px;
           height: auto;
@@ -183,8 +171,7 @@ Wadi Survey Section Styling
         margin: 30px;
       }
       h1 {
-        font-family: "GFS Didot";
-        font-size: 2em;
+            font-size: 2em;
         color: $main__wadi;
         em {
           color: #616060;
@@ -207,7 +194,6 @@ Wadi Survey Section Styling
         flex-direction: column;
         justify-content: center;
         h1 {
-          // font-weight: 700;
           color: $main__wadi;
         }
         p {
@@ -230,14 +216,9 @@ Wadi Survey Section Styling
 
 .wadi__how-wp-section {
   display: block;
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  // align-items: center;
-  // justify-content: center;
-  // flex-direction: column;
-  // padding: 0 180px;
-
   h1 {
     text-align: center;
   }
@@ -247,6 +228,7 @@ Wadi Survey Section Styling
   display: flex;
   align-items: center;
   padding-right: 30px;
+  min-width: 120px;
   color: $main__wadi;
   .wadi_pages_svg {
     width: 100px;
@@ -257,11 +239,15 @@ Wadi Survey Section Styling
 
   svg {
     font-size: 100px;
-    // width: 68px;
-    // height: 68px;
   }
 }
 .wadi__how-item {
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 480px) {
+  .wadi__icon {
+      display: none;
+  }
 }
